# vmonitor

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  install.sh
.github/workflows/: build.yaml  build_releases.yml  deployment.yml  release.yaml
release/: vmonitor.service
src/: api.rs  app.rs  cli.rs  config.rs  lib.rs  main.rs  metrics.rs  monitor.rs
src/features/: metrics.rs
tests/: app_test.rs  cli_test.rs  config_test.rs  monitor_test.rs
tests/common/: mod.rs
