[package]
name = "vmonitor"
version = "0.0.1-alpha.2"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["AprilNEA <github@sku.moe>"]
description = "A simple and lightweight system monitor"
repository = "https://github.com/vmvision/vmonitor"

[dependencies]
# Core
sysinfo = "0.33.1"
# Runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Websocket
tokio-tungstenite = "0.26.1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Utils
config = "0.14.0"
futures-util = "0.3"