[package]
name = "vmonitor"
version = "0.0.1-alpha.2"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["AprilNEA <github@sku.moe>"]
description = "A simple and lightweight system monitor"
repository = "https://github.com/vmvision/vmonitor"
readme = "README.md"
keywords = ["monitor", "system", "websocket", "metrics"]
categories = ["monitoring", "network-programming"]

[dependencies]
# Core
os_info = "3.7.0"
sysinfo = "0.33.1"
netstat2 = "0.11.1"
# Runtime
tokio = { version = "1", features = ["full"] }
# Serialization
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmpv = "1.3.0"
rmp-serde = "1.3.0"
# Websocket
rustls = { version = "0.23.25", default-features=false, features = ["ring"] }
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-webpki-roots"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Utils
config = "0.14.0"
futures = "0.3"
futures-util = "0.3"
# CLI
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
